# tokenizer-arena

./: Cargo.toml  LICENSE  README.md  RESULTS.md
.github/workflows/: ci.yml  release.yml
benchmarks/: run_benchmarks.sh
benchmarks/inputs/: english_prose.txt  json_payload.json  python_code.py
benchmarks/results/: english_prose.md  json_payload.md  multilingual.md  python_code.md
src/: compare.rs  display.rs  main.rs  tokenize.rs
tests/: integration.rs
tests/fixtures/: multilingual.txt  sample_code.py
