[package]
name = "tokenizer-arena"
version = "0.1.0"
edition = "2021"
description = "Compare how different LLM tokenizers handle the same input text"
license = "MIT"
repository = "https://github.com/amaljithkuttamath/tokenizer-arena"

[dependencies]
tiktoken-rs = "0.6"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
atty = "0.2"
